@startuml Beaver Botanica DB

entity User {
    * user_id : INTEGER (PK)
    __
    * username : TEXT()
    * date_joined : DATE
    * role: TEXT()
}

entity Plant {
    * plant_id : INTEGER (PK)
    __
    * species_id : INTEGER (FK)
    * image_id : INTEGER (FK)
    * description : TEXT()
    * location : TEXT()
    * avg_rating : REAL
    * date_added : DATE
    * date_updated : DATETIME()
    * x_coordinate : FLOAT(9, 6)
    * y_coordinate : FLOAT(9, 6)
}

entity Species {
    * species_id : INTEGER (PK)
    __
    * scientific_name : TEXT()
    * division : TEXT()
    * class : TEXT()
    * order : TEXT()
    * family : TEXT()
    * genus : TEXT()
    * species : TEXT()
    * common_name : TEXT()
    * season : TEXT()
}

entity Image {
    * image_id : INTEGER (PK)
    __
    * plant_id : INTEGER (FK)
    * image_url : TEXT()
    * date_uploaded : DATETIME()
}

entity Comment {
    * comment_id : INTEGER (PK)
    __
    * plant_id : INTEGER (FK)
    * user_id INTEGER (FK)
    * comment : TEXT()
    * date_posted : DATETIME()
}

entity Rating {
    * rating_id : INTEGER (PK)
    __
    * plant_id : INTEGER (FK)
    * user_id : INTEGER (FK)
    * rating : REAL
}

User ||--|{ Plant
User ||--|{ Comment
User ||--|{ Rating

Species ||--|{ Plant

Plant ||--|{ Image
Plant ||--|{ Comment
Plant ||--|{ Rating
@enduml
